# goingHome_project

./: README.md
L4T_Custom_build/: 00.getBuildresource.sh  01.getKernelSource_and_set_Toolchain_and_rootfs_source.sh  04-1.configure_kernel_settings_menuconfig_edition.sh  06.deploykernel_and_modules_to_image_build_folder.sh  08.build_img_file_using_nvidia_sdcard_build_system.sh  README.md
ROS_Study_python/: publihser_node_example.py
ROS_Study_python/Topic_message_Programming_1/: publisher_node_example.py  subscriber_node_example.py
ROS_Study_python/face_test/: sick_client.py  test.py
ROS_src/: README.md
ROS_src/goinghome_remote/msg/: nevi_point.msg
ROS_src/goinghome_remote/src/: goinghome_remote.h  remote_control.cpp  remote_gate.cpp
ROS_src/goinghome_remote/urdf/: turtlebot.urdf.xacro
dev_env/L4T_build/: 00.getBuildresource.sh  01.getKernelSource_and_set_Toolchain_and_rootfs_source.sh  03.initialize_output_tegra_default_configures.sh  04-1.configure_kernel_settings_menuconfig_edition.sh  04-2.configure_kernel_settings_xconfig_edition.sh  05.buildKernel_and_KernelModules.sh  06.deploykernel_and_modules_to_image_build_folder.sh  07.set_rootfs_by_load_qemu_and_chroot.sh  08.build_img_file_using_nvidia_sdcard_build_system.sh  exportVariables.sh
dev_env/turtlebot3_dev/: README.md  memo.txt
issue/camera_issue/: camera_issue.txt
jang_src/: jetson_camera_memo.launch
jang_src/csi_opencv_tester/: CMakeLists.txt  package.xml
jang_src/csi_opencv_tester/src/: bridger.py
jang_src/dev_memo/: rostopic_memo
jang_src/goinghome_host_controller/msg/: navigation_order.msg
jang_src/goinghome_host_controller/src/: file_server.cpp  main_controller.cpp  read_tmp.cpp  request_server.cpp
jang_src/goinghome_host_controller/srv/: goinghome_remote.srv  infoRequest.srv
jang_src/goinghome_host_eventhandler/: CMakeLists.txt  package.xml
jang_src/goinghome_host_eventhandler/src/: destination.cpp  eventhandler.h  main.cpp  main_control.cpp  request_server.cpp
jang_src/my_first_ros_pkg/: CMakeLists.txt  package.xml
jang_src/my_first_ros_pkg/src/: hello_world_node.cpp
jang_src/ros_tutorials_action/: CMakeLists.txt  package.xml
jang_src/ros_tutorials_action/src/: action_client.cpp  action_server.cpp
jang_src/ros_tutorials_roslaunch/: CMakeLists.txt  package.xml
jang_src/ros_tutorials_roslaunch/launch/: union.launch
jang_src/ros_tutorials_roslaunch/src/: topic_publisher.cpp  topic_subscriber.cpp
jang_src/ros_tutorials_service/: CMakeLists.txt  package.xml
jang_src/ros_tutorials_service/src/: service_client.cpp  service_server.cpp
jang_src/ros_tutorials_topic/: CMakeLists.txt  package.xml
jang_src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
project_report/: README.md
project_report/week7(0610-0614)/: 6.11.txt
project_report/week_07(0610-0614)/: 6.11.txt  6.12.txt  6.13.txt  6.14.md
project_report/week_08(0617-0621)/: 6.17.md  6.18.md  6.19.md  6.20.md  6.21.md
project_report/week_09(0624-0628)/: 6.24.md  6.25.md  6.26.md  6.27.md  6.28.md
project_report/week_10(0701-0705)/: 7.01.md  7.02.md  7.03.md  7.04.md  7.05.md  7.06.md
project_report/week_11(0708-0712)/: 7.08.md  7.09.md  7.10.md  7.11.md  7.12.md
project_report/week_12(0715-0719)/: 7.15.md  7.16.md  7.17.md  7.18.md
ros_src/: README.md
ros_src/goinghome_host_controller/: CMakeLists.txt  package.xml
ros_src/goinghome_host_controller/info/: person.txt  sector.txt
ros_src/goinghome_host_controller/msg/: survailance_order.msg
ros_src/goinghome_host_controller/src/: file_server.cpp  main_controller.cpp  read_tmp.cpp  request_server.cpp
ros_src/goinghome_host_controller/srv/: goinghome_remote.srv  infoRequest.srv
ros_src/goinghome_host_eventhandler/: CMakeLists.txt  package.xml
ros_src/goinghome_host_eventhandler/src/: camera_control.cpp  destination.cpp  eventhandler.h  main_control.cpp  request_server.cpp  util.cpp
ros_src/goinghome_host_eventhandler/srv/: nav_request.srv  survail_request.srv
ros_src/goinghome_remote/: CMakeLists.txt  package.xml
ros_src/goinghome_remote/launch/: camera_node.launch  fake_node.launch  remote_base.launch  turtlebot_remote.launch
ros_src/goinghome_remote/maps/: map.pgm  map.yaml
ros_src/goinghome_remote/scripts/: remote_camera.py
ros_src/goinghome_remote/src/: fake_node.cpp  remote_control.cpp  remote_gate.cpp  remote_nevi.cpp  remote_service.h
ros_src/goinghome_remote/srv/: goinghome_remote.srv  image.srv
seung/cartographer/: before_fixed_odometry_lua
seung/cartographer/config/: my_robot.lua
seung/cartographer/launch/: cartographer_rviz.launch  turtlebot3_cartographer.launch  turtlebot3_frontier_exploration.launch  turtlebot3_slam.launch  turtlebot3_slam_cp.launch
seung/image processing/report/: report(07.02).md
seung/image_processing/: check_module.py
seung/image_processing/face_test_2/: CMakeLists.txt  package.xml
seung/image_processing/src/: find_face.py
song_nevi/backup/simple_navigation_goals/: CMakeLists.txt  package.xml
song_nevi/backup/simple_navigation_goals/src/: .simple_navigation_goals.h.swp  simple_navigation_goals.cpp  simple_navigation_goals.h
song_nevi/backup/simple_navigation_goals/srv/: command.srv
song_nevi/goinghome_command/: CMakeLists.txt  package.xml
song_nevi/goinghome_command/src/: goinghome_command.cpp
song_nevi/goinghome_command/srv/: command.srv  event_command.srv
song_nevi/goinghome_remote/: CMakeLists.txt  package.xml
song_nevi/goinghome_remote/launch/: goinghome_remote.launch  remote_base.launch  turtlebot_remote.launch
song_nevi/goinghome_remote/scripts/: remote_camera.py
song_nevi/goinghome_remote/src/: fake_node.cpp  remote_base.h  (+4 more)
song_nevi/goinghome_remote_v2/: CMakeLists.txt  package.xml
song_nevi/goinghome_remote_v2/param/: dwa_local_planner_params.yaml
song_nevi/goinghome_remote_v2/src/: fake_node.cpp  goinghome_remote_v2.h  remote_control.cpp  remote_gate.cpp  remote_nevi.cpp  remote_service.h
song_nevi/goinghome_remote_v2/srv/: image.srv  remote_point.srv
song_nevi/simple_navigation_goals/: CMakeLists.txt  package.xml
(+18 files in other folders)
