<?xml version="1.0"?>
<package format="2">
  <name>my_first_ros_pkg</name>
  <version>0.0.1</version>
  <description>The my_first_ros_pkg package</description>
  <author email="dreamfinder2019@google.com">dreamfinder2019</author>
  <maintainer email="dreamfinder2019@google.com">dreamfinder2019</maintainer>
  <license>Apache License 2.0</license>
  <url type="bugtracker">http://github.com/ROBOTIS-GIT/ros_tutorials/issues</url>
  <url type="repository">http://github.com/ROBOTIS-GIT/ros_tutorials/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <export></export>
</package>
